# Clutch

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Application.h  Application.m  BUILD.md  Binary.h  Binary.m  CMakeLists.txt  CPDistributedMessanging.h  Clutch-Info.plist  Clutch.entitlements  Clutch_Prefix.pch  Cracker.h  Cracker.m  FindMyiPhone  Framework64Dumper.m  Info.plist  Info.plist.original  InfoPlist  LSApplicationProxy.h  LSApplicationWorkspace.h  Makefile  README.md  add-entitlements.sh  applist.h  applist.m  build-iphoneos.sh  build-ldid.sh  build.sh  codesign.sh  crack.h  crack.m  dump.h  dump.m  generate-xcodeproj.sh  main.m  out.h  out.m  (+1 more)
.github/: ISSUE_TEMPLATE.md
Classes/: API.h  API.m  Application.h  Application.m  ApplicationLister.h  ApplicationLister.m  Binary.h  Binary.m  CAApplication.h  CAApplication.m  CAApplicationsController.h  CAApplicationsController.m  CABinary.h  CABinary.m  CADevice.h  CADevice.m  Configuration.h  Configuration.m  Constants.h  Cracker.h  Cracker.m  Device.h  Device.m  Install.h  Install.m  Localization.h  Localization.m  MobileInstallation.h  NSTask.h  Packager.h  Packager.m  Preferences.h  Preferences.m  Prefs.h  Prefs.m  YOPAPackage.h  YOPAPackage.m  ZipArchive.h  ZipArchive.m  applist.h  (+20 more)
Classes/minizip/: miniunz.c  minizip.c  unzip.c
Clutch/: ARM64Dumper.h  ARM64Dumper.m  ARMDumper.h  ARMDumper.m  ARMv6Dumper.h  ARMv6Dumper.m  ARMv7Dumper.h  ARMv7Dumper.m  ASLR.h  ASLR.m  ASLRDisabler.h  ASLRDisabler.m  AppDelegate.h  AppDelegate.m  Application.h  Application.m  ApplicationsManager.h  ApplicationsManager.m  Binary.h  Binary.m  BinaryDumpProtocol.h  BundleDumpOperation.h  BundleDumpOperation.m  CMakeLists.txt  Clutch-Prefix.pch  Clutch.entitlements  ClutchBundle.h  ClutchBundle.m  ClutchCommands.h  ClutchCommands.m  ClutchPrint.h  ClutchPrint.m  Device.h  Device.m  Dumper.h  Dumper.m  Dumper_old.h  Dumper_old.m  Extension.h  Extension.m  (+60 more)
Clutch.xcodeproj/: project.pbxproj
Clutch.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Clutch.xcodeproj/project.xcworkspace/xcuserdata/dev.xcuserdatad/: UserInterfaceState.xcuserstate
Clutch.xcodeproj/project.xcworkspace/xcuserdata/thomas.xcuserdatad/: UserInterfaceState.xcuserstate
Clutch.xcodeproj/project.xcworkspace/xcuserdata/ttwj.xcuserdatad/: UserInterfaceState.xcuserstate
Clutch.xcodeproj/project.xcworkspace/xcuserdata/vtyj.xcuserdatad/: UserInterfaceState.xcuserstate
Clutch.xcodeproj/xcshareddata/xcschemes/: Clutch.xcscheme  [DEBUG] Clutch.xcscheme  libclutch.xcscheme
Clutch.xcodeproj/xcuserdata/dev.xcuserdatad/xcschemes/: xcodewtf.xcscheme  xcschememanagement.plist
Clutch.xcodeproj/xcuserdata/thomas.xcuserdatad/xcschemes/: Clutch.xcscheme
Clutch.xcodeproj/xcuserdata/ttwj.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
Clutch.xcodeproj/xcuserdata/ttwj.xcuserdatad/xcschemes/: xcschememanagement.plist
Clutch/MiniZip/: CMakeLists.txt  crypt.h  ioapi.c  ioapi.h  unzip.c  unzip.h  zip.c  zip.h
Clutch/Package/DEBIAN/: control  control.txt
Clutch/ldid/: ldid.h  ldid.mm  lookup2.c
Clutch/ldid/mapping/: ldid_mapping.h  ldid_stdlib.h  ldid_string.h
ClutchTests/: ClutchTests.m  Info.plist
Libraries/yopa-package/: CRC32.h  CRC32.m  YOPAPackage.h  YOPAPackage.m  YOPASegment.h  YOPASegment.m
MiniZip/: Makefile  cmake_install.cmake
Resources/: Clutch-Info.plist  Clutch.entitlements  Clutch_Prefix.pch  Property List.plist  grabstrings.sh
Resources/en.lproj/: Localizable.strings
cmake/: AddFramework.cmake  DebugUtils.cmake  iphoneos.toolchain.cmake
libclutch/: clutch-Prefix.pch  init.m  libclutch.h
remoteAttach/: main.m
xcodewtf/: xcodewtf.m
